@@ -307,6 +307,7 @@ static void crk_remove_hash(struct db_salt *salt, struct db_password *pw)
 		while (*current != pw)
 			current = &(*current)->next;
 		*current = pw->next;
+		BLOB_FREE(crk_db->format, pw->binary);
 		pw->binary = NULL;
 		return;
 	}
@@ -351,8 +352,10 @@ static void crk_remove_hash(struct db_salt *salt, struct db_password *pw)
  * Or, if FMT_REMOVE, the format explicitly intends to traverse the list
  * during cracking, and will remove entries at that point.
  */
-	if (crk_guesses || (crk_params->flags & FMT_REMOVE))
+	if (crk_guesses || (crk_params->flags & FMT_REMOVE)) {
+		BLOB_FREE(crk_db->format, pw->binary);
 		pw->binary = NULL;
+	}
 }
 
 /* Negative index is not counted/reported (got it from pot sync) */
@@ -414,7 +417,7 @@ static int crk_process_guess(struct db_salt *salt, struct db_password *pw,
 	}
 
 	// Ok, FIX the salt  ONLY if -regen-lost-salts=X was used.
-	if (options.regen_lost_salts && (crk_db->format->params.flags & FMT_DYNAMIC) == FMT_DYNAMIC)
+	if (options.regen_lost_salts && (crk_params->flags & FMT_DYNAMIC) == FMT_DYNAMIC)
 		crk_guess_fixup_salt(pw->source, *(char**)(salt->salt));
 
 	/* If we got this crack from a pot sync, don't report or count */
@@ -434,7 +437,7 @@ static int crk_process_guess(struct db_salt *salt, struct db_password *pw,
 			john_max_cands = status.cands - options.max_cands +
 				crk_params->max_keys_per_crypt;
 
-		if (dupe)
+		if (dupe && !(crk_params->flags & FMT_BLOB))
 			ct = NULL;
 		else
 			ct = ldr_pot_source(
@@ -503,7 +506,6 @@ static int crk_remove_pot_entry(char *ciphertext)
 	struct db_password *pw;
 	char argcopy[LINE_BUFFER_SIZE];
 	void *pot_salt;
-	char *binary = crk_methods.binary(ciphertext);
 
 	/*
 	 * If the pot entry is truncated from a huge ciphertext, we have
@@ -578,8 +580,10 @@ static int crk_remove_pot_entry(char *ciphertext)
 	}
 	else {
 		int hash;
+		char *binary = crk_methods.binary(ciphertext);
 
 		hash = crk_methods.binary_hash[salt->hash_size](binary);
+		BLOB_FREE(crk_db->format, binary);
 		if (!(salt->bitmap[hash / (sizeof(*salt->bitmap) * 8)] &
 		      (1U << (hash % (sizeof(*salt->bitmap) * 8)))))
 			return 0;
